--- a/aura_flutter/pubspec.yaml
+++ b/aura_flutter/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   webview_flutter_wkwebview: 
   flutter_spinkit: ^5.2.1
   google_fonts: ^6.2.1
+  permission_handler: ^12.0.1
 
 dev_dependencies:
   flutter_test:
